changes feed connection stuff simplified